--- a/static/stylesheet.css
+++ b/static/stylesheet.css
@@ -8,7 +8,7 @@ div#lineplot, div#heatmap{
 table#tablelineplots
 {
 	border:0;
-table-layout:fixed;
+  table-layout:fixed;
     width:100%;
     border-spacing:0;
     border-collapse:collapse;
@@ -17,6 +17,12 @@ table-layout:fixed;
     position: relative;
 	height: auto;
 	padding-bottom:0;
+}
+
+table#tablelineplots svg
+{
+  height:auto;
+  width:100%;
 }
 
 #tablelineplots > tbody {
