new js edits and app.py

--- a/templates/graphs.html
+++ b/templates/graphs.html
@@ -27,7 +27,7 @@
                         {% endfor %}
                     </select>
                     <input class="submit-button" type="submit" id="submit-btn-df">
-		    <button class="submit-button" id="hidden-btn">Show Heatmap</button>
+		    <!--button class="submit-button" id="hidden-btn">Show Heatmap</button-->
                 </form>
                 <div id="innerPanelLnPlt">
                     <!- #line plots go here ->
