working correlation fx, submit btn fx

--- a/templates/graphs.html
+++ b/templates/graphs.html
@@ -26,7 +26,13 @@
                         <option value="{{eachpltcode}}">{{eachpltcode}}</option>
                         {% endfor %}
                     </select>
-                    <input class="submit-button" type="submit" id="submit-btn-df">
+		    <div class="fx-btn-19">
+			    <input class="submit-button" type="submit" id="submit-btn-df" value="Show Line Plot">
+		    </div>
+		    <div class="fx-btn-pre19">
+			    <input class="submit-button" type="submit" id="hidden-btn" value="Show Heatmap">
+		    </div>
+		    
 		    <!--button class="submit-button" id="hidden-btn">Show Heatmap</button-->
                 </form>
                 <div id="innerPanelLnPlt">
