--- a/templates/graphs.html
+++ b/templates/graphs.html
@@ -18,7 +18,7 @@
         <div class="panel panel-default">
 			<div class="panel-heading" id="panelHeadLnPlt"><h3>Enter Plate Code</h3></div>
 			<div class="panel-body" id="lineplot">
-                <form id="form-lineplt">
+                <!--form id="form-lineplt">
                     <label for="pltcode_selector">Plate Code: </label>
                     <select id="pltcode_selector" name="pltcode_selector" onchange="showBtn('hidden-btn',this)">
                         <option value="{{pltcodes[0]}}" selected> {{pltcodes[0]}} </option>
@@ -33,8 +33,17 @@
 			    <input class="submit-button" type="submit" id="hidden-btn" value="Show Heatmap">
 		    </div>
 		    
-		    <!--button class="submit-button" id="hidden-btn">Show Heatmap</button-->
-                </form>
+                </form-->
+
+		<form id="form-lineplt" autocomplete="off">
+		    <label for="ac_pltcodes">Plate Code: </label>
+			  <div class="autocomplete" style="width:300px;">
+			    <input id="ac_pltcodes" type="text" name="platecodes" placeholder="Platecodes">
+			  </div>
+			  <input class="submit-button" type="submit" id="submit-btn-df" value="Show Plot">
+		</form>
+		<br>
+
                 <div id="innerPanelLnPlt">
                     <!- #line plots go here ->
                 </div>
@@ -57,6 +66,7 @@
 						</select>
 						<input class="submit-button" type="submit" id="submit-btn-hm">			
 				</form>
+				<br>
 				<div id="innerPanel">		
                     <!- #heatmap goes here->	
                 </div>
@@ -71,7 +81,7 @@
            
                 <table id="corr-menu-tbl">
                 <tr>
-                        <form id="form-corr">
+                        <!--form id="form-corr">
                         <td><label for="correl_selector">Platecode pair: </label></td>
                         <td>
                             <select id="correl_selector">
@@ -82,13 +92,23 @@
                             </select>
                         </td>
                         <td><input class="submit-button" type="submit" id=submit-btn-corr"></td>
-                        </form>
+                        </form-->
             
+			<form id="form-corr" autocomplete="off">
+			    <label for="ac_pltcodes2">Plate Code: </label>
+				  <div class="autocomplete" style="width:300px;">
+					  <input id="ac_pltcodes2" type="text" name="platecodes2" placeholder="Platecodes">
+				  </div>
+			    <input class="submit-button" type="submit" id="submit-btn-corr" value="Show Table">
+			</form>
+
+			<br>
+
                 </tr>
 
                 <tr>
                         <form id="form2-wavelength">
-						<td><label for="wavelength_selector2">Wavelength:</label></td>	
+			<td><label for="wavelength_selector2">Wavelength:</label></td>	
                         <td>
                             <select id="wavelength_selector2">
                             <option value="{{wvls[0]}}" selected> {{wvls[0]}}</option>
